--- a/txt/7-evaluation.tex
+++ b/txt/7-evaluation.tex
@@ -13,4 +13,11 @@
 
 \section{Performance}
 
+\begin{figure}[ht]
+    \includegraphics[scale=0.3]{../img/07/performance_tests.jpg}
+    \centering
+    \caption{This figure visualizes the duration of encrypting the same log for a different number of recipients.}
+    \label{fig:mutual_encryption}
+\end{figure}
+
 \end{document}
