--- a/literature.bib
+++ b/literature.bib
@@ -489,6 +489,13 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   url     = {https://arxiv.org/pdf/2103.10769.pdf},
 }
 
+@Book{Katz2020,
+  author    = {Katz, Jonathan and Lindell, Yehuda},
+  publisher = {CRC press},
+  title     = {Introduction to modern cryptography},
+  year      = {2020},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
