--- a/txt/99-appendix.tex
+++ b/txt/99-appendix.tex
@@ -26,7 +26,7 @@ This appendix details the applied encryption and decryption algorithms.
 
 \chapter{Screenshots Clotilde UI}
 
-This appendix contains screenshots of the implemented features in the \textit{Clotilde UI}.
+This appendix contains screenshots of the implemented features in the \emph{Clotilde UI}.
 
 \label{app:screenshots}
 \begin{figure}[h!]
