--- a/txt/4-overview-solutions.tex
+++ b/txt/4-overview-solutions.tex
@@ -5,15 +5,16 @@
 \chapter{Overview of potential solutions}
 \label{chap:overview}
 
-This chapter theoretically elaborates on different approaches to implementing the requirements defined in chapter \ref{requirements}.
+This chapter theoretically elaborates on different approaches to implementing the requirements defined in chapter \ref{chap:requirements}.
 The sketched protocols illustrate different encryption techniques.
-Each section details the consequences of the technique to the requirements of this thesis.
+Each section discusses the consequences of the technique to the requirements of this thesis.
 The outcome of this chapter is a set of possible solution strategies.
-Additionally, section~\ref{sec:justification} justifies why hybrid encryption is chosen as encryption technique in this thesis.
+Section~\ref{sec:modern-e2ee} relates them to modern protocols used in end-to-end encrypted applications. 
+Finally, section~\ref{sec:justification} justifies why hybrid encryption is chosen as encryption technique in this thesis.
 
 The following table summarizes the major results of this chapter.
 It provides an overview for the reader.
-A check (\checkmark) indicates that a approach satisfies the corresponding requirement.
+A check (\checkmark) indicates that an approach satisfies the corresponding requirement.
 A missing check means that the approach conflicts with the requirement.
 Details and justifications can be found in the corresponding sections below.
 
@@ -32,17 +33,17 @@ Details and justifications can be found in the corresponding sections below.
     \ref{sec:broadcast-identity}    & CBBE                      & \checkmark  & \checkmark  & \checkmark    & \checkmark    & \checkmark    & \checkmark    & \checkmark    &               & \checkmark    & \checkmark    \\ \hline
     \ref{sec:broadcast-proxy}       & PRE                       & \checkmark  & \checkmark  & \checkmark    &               & \checkmark    & \checkmark    &               &               & \checkmark    & \checkmark    \\ \hline
 \end{tabular}
-\caption{Satisfaction of all considered encryption techniques regarding the given requirements.}
+\caption{Overview of the considered encryption techniques and their implications to the system requirements.}
 \label{tab:overview-summary}
 \end{table}
 
 \section{External encryption}
 \label{sec:external-encryption}
-An intuitive way of implementing a protocol that allows the exchange of logs among users is to rely on external encryption tools.
+An intuitive way of implementing a protocol that allows the exchange of encrypted logs among users is to rely on external tools.
 Suppose that Alice wants to share a log with Bob.
 Alice could send the log to Bob with an encrypted email.
 Emails can be encrypted with standardized protocols, e.g. PGP\footnote{Defined by IETF in \href{https://www.rfc-editor.org/rfc/rfc4880}{RFC4800}.} or S/MIME\footnote{Defined by IETF in \href{https://www.rfc-editor.org/rfc/rfc8551.html}{RFC8551}.}.
-Such encryption technologies allow Alice to confidentially share logs with others.
+They allow Alice to confidentially share logs with others.
 This approach, however, is limited and does not satisfy the identified requirements.
 It is the responsibility of the user to correctly apply the protocol.
 This is error-prone, it could lead to unintended security issues and it is not user-friendly.
@@ -61,7 +62,7 @@ The term mutual encryption refers to the idea that logs are encrypted mutually b
 If each user is assigned a key pair, a data owner can encrypt a log for each user separately.
 The core idea is similar to the approach presented for external encryption (section \ref{sec:external-encryption}).
 However, this approach integrates the encryption and decryption of logs into the toolchain.
-To better understand this approach consider the following example.
+To better understand it consider the following example.
 A monitor component accesses data of Alice and therefore creates a log.
 Since Alice needs to be able to access the log, the monitor encrypts the log under the public key of Alice and sends it to the server.
 If Alice keeps her private key secret she is the only entity who can decrypt the log.
@@ -73,9 +74,9 @@ All functional requirements are fulfilled:
 Alice can access the log because the monitor encrypted it with her public key.
 She can also share logs with others.
 The encrypted data is stored by the Overseer server.
-It allows Alice to request the deletion of the cipher from the server.
-This way Alice can revoke access to the log.
-As long as all users have exclusive access to their private key, this approach also ensures the confidentiality of the log (security requirement S1).
+This allows Alice to request the deletion of the cipher from the server.
+Thus, Alice can revoke access to the log.
+As long as all users have exclusive access to their private keys, this approach also ensures the confidentiality of the log (security requirement S1).
 
 To defend against malicious data owners creating forged logs, the monitor component (e.g. the entity creating a log) needs to cryptographically sign the log before encryption.
 If Alice shares the log, she does not share the plain log.
@@ -107,24 +108,25 @@ The receiver can also verify if the nested access log was signed by the claimed 
 \end{figure}
 
 This approach relies on standardized asymmetric cryptography (e.g. RSA).
-While this approach fulfills all functional and security requirements it suffers from performance problems.
+While it fulfills all functional and security requirements it suffers from performance problems.
 Similar to external encryption, the whole log needs to be encrypted $n$ times if it is shared with $n$ users.
 Much more problematic, however, is the application of asymmetric cryptography to application data.
 Public-key cryptography relies on intense mathematical computations and should not be used to encrypt large amounts of data directly~\cite[340]{Eckert2018}.
 Eckert justifies this with the fact that asymmetric encryption algorithms are muss less performant than symmetric algorithms.
-Following her argumentation, asymmetric cryptography is therefore usually used to encrypt a symmetric key which finally encrypts the larger payload.
+Following her argumentation, asymmetric cryptography is therefore usually used to encrypt a symmetric key which finally encrypts the larger payload with a symmetric scheme.
 Thus, the implemented protocol should avoid the encryption of log data with asymmetric algorithms.
 
 \section{Hybrid encryption}
 \label{sec:hybrid-encryption}
 
-The approach extends the ideas introduced in the previous section \ref{sec:mutual-encryption}.
-The concept of hybrid encryption combines the advantages of asymmetric cryptography with the advantages of symmetric cryptography.
-In a hybrid scheme, a symmetric key is encrypted with asymmetric algorithms.
-The symmetric keys are short (e.g. 128 or 256 bit for AES).
-Thus, the expensive asymmetric algorithms only encrypt and decrypt little data.
-The larger payload is then encrypted with a fast symmetric scheme using the exchanged key.
-The asymmetric scheme is used to transport the symmetric key.~\cite[340]{Eckert2018}
+The approach extends the concept introduced in the previous section \ref{sec:mutual-encryption}.
+Hybrid encryption combines the advantages of asymmetric cryptography with the advantages of symmetric cryptography.
+In a hybrid scheme, the content is encrypted via symmetric encryption.
+The short symmetric key (e.g. 128 or 256 bit for AES) is then encrypted with asymmetric algorithms.
+Thus, the expensive asymmetric algorithms only encrypt small amounts of data.
+It is used to securely transport the symmetric key.
+The larger payload is encrypted with an efficient symmetric scheme.
+~\cite[340]{Eckert2018}
 
 Consider the scenario where Alice wants to share data with Bob.
 Alice initially generates a symmetric key $k$.
@@ -132,7 +134,7 @@ She uses $k$ to encrypt the payload with a symmetric scheme (e.g. AES).
 She then encrypts $k$ under the public key of Bob.
 Finally, she sends the encrypted key along with the encrypted payload.
 To decrypt the payload, Bob first decrypts the symmetric key $k$ using his private key.
-In the final step, Bob can apply $k$ to decrypt the payload.
+In the final step, Bob can use $k$ to decrypt the symmetrically encrypted cipher.
 
 This concept can be applied to the context of this thesis.
 An initially created log is encrypted for Alice using hybrid encryption.
@@ -203,24 +205,26 @@ This increases the attack surface of the system and does not adhere to the non-f
 
 \section{Attribute-based encryption}
 \label{sec:attribute-encryption}
-Attribute-based encryption is an approach to provide access control within the domain of cryptography~\cite{Bethencourt2007}. 
-Without attribute-based encryption, access control techniques need to be implemented by a server. 
-Access will be granted if the requesting user is allowed to read/write the data (e.g. if the user works for a certain company). 
-Thus, the server ensures that only authorized entities access data. 
-Consider the case where this server is compromised: 
-The attacker has unlimited access to the stored data because the access control techniques are no longer in place and the data itself is not encrypted.
-Attribute-based encryption schemes shift the logic of access control into encryption and decryption algorithms. 
-A distinction is made between a set of possible attributes (e.g. ${A,B,C}$) and a policy. 
-Policies are logical expressions over attributes (e.g. $A \land B \land \neg C$). 
-A private key of a user contains certain attributes. 
-During encryption, a user specifies a policy that is encoded into the ciphertext.
-A ciphertext can only be decrypted with a private key fulfilling that policy.
-Within the domain of \textit{ABE}, one can differentiate between \textit{ciphertext-policy ABE} and \textit{key-policy ABE}. 
-The above-described scenario, where the policy is encoded into the ciphertext and the key of the user is checked against this policy, is called \textit{ciphertext-policy ABE}. 
-On the contrary, \textit{key-policy ABE} describes the scenario where the policy is encoded into the key of the user.
-Thus, a user can only decrypt a ciphertext that is annotated with the corresponding attributes.~\cite{Bethencourt2007}
+Data access control mechanisms validate if a user is authorized to perform an action on certain data~\cite[242]{Eckert2018}.
+Access control is usually enforced by a server.
+Whenever a user requests the access to data, the server checks if the user has the required permissions (e.g. if the user is employed by a specific company).
+A compromised server, however, can cause serious harm to a system because the server has unlimited access to all data stored in the server~\cite{Hagg2022}.
+Specifically, if data is not end-to-end encrypted an attacker can access the data in plaintext.
+Attribute-based encryption mitigates that threat.
+It shifts the logic of access control into the domain of cryptography~\cite{Bethencourt2007}.
+Data is encrypted along with permissions.
+A user can only decrypt the data if it owns the demanded permissions.
 
-The notation of \textit{ciphertext-policy ABE} can be used directly to encrypt data for multiple receivers. 
+Attribute-based encryption distinguishes between attributes and policies.
+Attributes (e.g. ${A,B,C}$) are assigned to users.
+This assignment is encoded into a private key.
+Thus, the private key of the user contains attributes which are used to check if the user has certain permissions.
+Attributes can be used to create policies (e.g. $A \land B \land \neg C$).
+A policy is a logical expression over attributes.
+While encrypting data, the user specifies a policy which is encoded into the cipher.
+A successful decryption requires a private key which satisfies the policy.
+
+\emph{ABE} can be used directly to encrypt data for multiple receivers~\cite{Bethencourt2007}. 
 During encryption, a policy is defined. 
 All users which are equipped with attributes fulfilling this policy can decrypt data.
 By encoding the name of the valid receivers into the policy, the encrypting user could specify the set of users who can decrypt.
@@ -242,7 +246,7 @@ It is not included in the Web Cryptographic API~\cite{WebCryptoApi2017}.
 \section{Broadcast encryption}
 \label{sec:broadcast-encryption}
 
-Broadcast encryption (\textit{BE}) is an encryption technique that allows the encrypting user to specify a set of authorized recipients.
+Broadcast encryption (\emph{BE}) is an encryption technique that allows the encrypting user to specify a set of authorized recipients.
 Only those users can decrypt the produced ciphertext.
 It was initially proposed by~\citeauthor{fiat1993broadcast}~\cite{fiat1993broadcast}.
 In the last years different realization of broadcast encryption schemes were discussed~\cite{Sakai2007, Li2018, Hagg2022, Fan2013}.
@@ -252,17 +256,17 @@ Furthermore, each approach is evaluated against the system requirements.
 \subsection{Identity-based broadcast encryption} 
 \label{sec:broadcast-identity}
 
-Traditional identity-based encryption (\textit{IBE})) schemes are  a type of public-key cryptography.
+Traditional identity-based encryption (\emph{IBE})) schemes are  a type of public-key cryptography.
 The public key of a user is a human rememberable string (e.g. the email address).
 For a given public key the private key can be generated using a dedicated derivation function.
 Those private keys must be computed by a trusted entity which has access to secret system parameters.~\cite{shamir1985}
 
 This basic idea was later adopted to implement broadcast encryption~\cite{Hagg2022}.
-The resulting schemes are called identity-based broadcast encryption (\textit{IBBE})~\cite{Sakai2007}.
+The resulting schemes are called identity-based broadcast encryption (\emph{IBBE})~\cite{Sakai2007}.
 The following example illustrates its functionality~\cite{Hagg2022}:
 Assume the users Alice and Bob.
 Both own unique email addresses.
-First of all, the \textit{IBBE} scheme needs to be instantiated.
+First of all, the \emph{IBBE} scheme needs to be instantiated.
 The trust center computes the private keys on behalf of Alice and Bob based on their email addresses.
 It also distributes the private keys and public system parameters to both users.
 Alice wants to send confidential data to Bob.
@@ -274,18 +278,18 @@ In order to revoke a user, Alice must re-encrypt the data and upload it again.
 The example shows that all three functional requirements can be fulfilled.
 The techniques from section \ref{sec:mutual-encryption} can be applied again.
 This satisfies the security requirement S2 (the receiver can verify it is a valid encryption endpoint) and S3 (the data owner can not forge logs).
-\textit{IBBE} schemes suffer from key escrow because a trusted party computes and distributes private keys~\cite{Hagg2022}.
+\emph{IBBE} schemes suffer from key escrow because a trusted party computes and distributes private keys~\cite{Hagg2022}.
 This breaks the confidentiality of the encrypted logs (security requirement S2).
 The additional trusted entity also increases the attack surface breaking non-functional requirement N1 (minimal number of trusted entities).
-A lot of research is going on in the field of \textit{IBE}~\cite{Hagg2022}.
-However, no cryptographic standard exists for \textit{IBE} or \textit{IBBE}.
+A lot of research is going on in the field of \emph{IBE}~\cite{Hagg2022}.
+However, no cryptographic standard exists for \emph{IBE} or \emph{IBBE}.
 It is not included in the Web Cryptographic API~\cite{WebCryptoApi2017}.
 This conflicts with the non-functional requirement N3.
 
 \subsection{Certificate-based broadcast encryption}
 \label{sec:broadcast-certificate}
 
-Certificate-based encryption (\textit{CBE}) was initially proposed in 2003~\cite{Gentry2003}. 
+Certificate-based encryption (\emph{CBE}) was initially proposed in 2003~\cite{Gentry2003}. 
 The following observations motivated this approach~\cite{Hagg2022}:
 \begin{itemize}
     \item 
@@ -297,21 +301,21 @@ The following observations motivated this approach~\cite{Hagg2022}:
     \item 
     Traditional public key schemes can be combined with identity-based schemes by double encrypting the plaintext.
     In particular, the plaintext is encrypted once under the public key of the traditional scheme and once under the public key of the identity-based scheme.
-    The result of this construction are \textit{CBE} schemes.
+    The result of this construction are \emph{CBE} schemes.
     They eliminate key escrow and the certificate revocation problem.
 \end{itemize}
 
-This idea was later adopted to broadcast encryption yielding a certificate-based broadcast encryption scheme (\textit{CBBE})~\cite{Li2018}.
+This idea was later adopted to broadcast encryption yielding a certificate-based broadcast encryption scheme (\emph{CBBE})~\cite{Li2018}.
 Although this construction relies on a key generation center, it does not suffer from key escrow~\cite{Hagg2022}.
 Once keys are established, a user can encrypt data for dedicated recipients.
 Only the users specified during encryption can decrypt the cipher.
 The key generation center can not decrypt the cipher because it does not have access to any private key of the traditional scheme~\cite{Hagg2022}.
-Besides the functional requirements, \textit{CBBE} also satisfies the security requirements.
+Besides the functional requirements, \emph{CBBE} also satisfies the security requirements.
 The distinction of shared log and signed log introduced in section \ref{sec:mutual-encryption} can be applied again.
 Thus, all receivers can validate that they are intended decryption endpoints (security requirement S2) and that the access log was created by the claimed monitor (security requirement S3).
 The notion of E2EE is also fulfilled because the trusted server can not decrypt the logs.
 
-Unfortunately, no reference implementations of \textit{CBBE} exist.
+Unfortunately, no reference implementations of \emph{CBBE} exist.
 This fact is a major drawback in the context of this thesis.
 These cryptographic systems are currently the subject of research.
 There are no ongoing standardization processes to analyze their security.
@@ -320,7 +324,7 @@ Using those schemes in a practical implementation is avoided in this thesis beca
 
 \subsection{Proxy re-encryption based broadcast encryption}
 \label{sec:broadcast-proxy}
-Proxy re-encryption (\textit{PRE}) is another encryption technique proposed to realize broadcast encryption~\cite{Hagg2022}.
+Proxy re-encryption (\emph{PRE}) is another encryption technique proposed to realize broadcast encryption~\cite{Hagg2022}.
 Its fundamental concept relies on a trusted proxy which can transform encrypted data between users.
 It is an important requirement of those schemes that the proxy does not learn anything about the plaintext during this re-encryption~\cite{Chen2018}.
 
@@ -343,6 +347,7 @@ It is not included in the Web Cryptographic API~\cite{WebCryptoApi2017}.
 This conflicts with the non-functional requirement N3.
 
 \section{E2EE in modern technology}
+\label{sec:modern-e2ee}
 
 Many modern communication applications rely on E2EE. 
 This section exemplarily investigates the implemented protocols of Zoom, CloudSeal and of the messaging services Whatsapp and Signal.
