--- a/txt/5-protocol-design.tex
+++ b/txt/5-protocol-design.tex
@@ -35,26 +35,40 @@ Each user needs to have exclusive access to its private keys.
 The public keys of all users are expected to be publicly available in the system.
 The protocol further assumes that a user that participates in the system has access to its key material (e.g. via hardware token).
 
-The protocol relies on three fundamental operations: 
-Creating, encrypting and decrypting logs.
-They can be used to securely encrypt logs.
-Moreover, data owner can share or revoke access logs by re-encrypting them.
+The protocol relies on three fundamental cryptographic operations:
+Signing, encrypting and decrypting logs.
+They are used to construct the full functionality of the demanded protocol.
+They allow the E2EE of logs and they can be used to share and revoke access to logs.
 The following description delivers a high-level overview of how the protocol functions.
 This is additionally visualized in figure~\ref{fig:protocol-overview}.
 
-Whenever a monitor component observes a data access it is required to create an access log.
-A log must always be a signed data structure.
-Thus, the protocol requires the monitor to perform two tasks.
-First, the raw log data needs to be cryptographically signed by the monitor.
-Second, the log needs to be encrypted for the data owner (only the data owner is allowed to access the log upon creation).
-The encrypted log is finally sent to the Overseer.
-This allows the data owner to request and decrypt the log.
-The decryption process also involves validity checks of the received data.
-This ensures that the protocol was applied correctly.
-The data owner can share or revoke access to the log for users.
-This requires the data owner to apply the encryption algorithm and upload the re-encrypted data to the server.
-All specified receivers can download and decrypt the log.
-Again, validity checks of the received data ensure that the defined security requirements are respected.
+\begin{enumerate}
+    \item
+    Whenever a monitor component observes a data access it is required to create an access log.
+    A log must always be a signed data structure.
+    Thus, the protocol requires the monitor to perform two tasks.
+    First, the raw log data needs to be cryptographically signed by the monitor.
+    Second, the log needs to be encrypted for the data owner (only the data owner is allowed to access the log upon creation).
+    The encrypted log is finally sent to the Overseer.
+    This allows the data owner to request and decrypt the log.
+    The decryption process also involves validity checks of the received data.
+    This ensures that the protocol was applied correctly.
+    \item 
+    The data owner can share or revoke access to a log for users.
+    First, the data owner needs to download and decrypt the log from the server.
+    To share or revoke access the data owner then needs to apply the encryption algorithm with a set of desired users.
+    Please note that the decrypted log stores information about the users who are currently allowed to access the log.
+    Access can be shared by adding additional users during encryption.
+    Access can be revoked by omitting users during encryption.
+    It is crucial to the protocol that the data owner always specifies itself within the set of authorized users.
+    Otherwise, the data owner can not decrypt the log anymore.
+    Finally, the user uploads the log to the server.
+    \item
+    Users who are specified during a sharing process can download and decrypt the corresponding log.
+    They can request the server for those logs and apply their private decryption key to restore the plain log.
+    Again, validity checks of the received data ensure that the defined security requirements are respected.
+    
+\end{enumerate}
 
 Please note that the encryption algorithm can be applied by the monitor and the owner of the log.
 Although only data owners are allowed to share and revoke access to logs, the log must be initially made available for the data owner.
@@ -83,18 +97,18 @@ In this section, general design considerations for the protocol are discussed.
 Section~\ref{sec:sign-and-encrypt} evaluates the secure combination of encryption and authentication mechanisms.
 To design a practical and efficient protocol, intermediate servers are dependent on metadata.
 This is elaborated in section~\ref{sec:metadata}.
-Finally, section~\ref{sec:jose-protocol} illustrates how the \textit{JOSE} standard can be used to practically implement the protocol.
+Finally, section~\ref{sec:jose-protocol} illustrates how the \emph{JOSE} standard can be used to practically implement the protocol.
 
 \subsection{Secure application of encryption and authentication}
 \label{sec:sign-and-encrypt}
 In general, the protocol sends encrypted data (containing a log) to a set of recipients.
 The recipients must verify the authenticity of the encrypted data because only the owner or the monitor of a log can encrypt.
 Thus, the creator of an encrypted log is required to cryptographically sign the sent data.
-This arises the question, if encrypted data should be signed (\textit{encrypt-then-sign}) or if signed data should be encrypted (\textit{sign-then-encrypt}).
-In general, the \textit{encrypt-then-sign} approach is considered less secure because a malicious entity could simply stripe the signature and sign the ciphertext using its own secret key~\cite{Davis2001}.
+This arises the question, if encrypted data should be signed (\emph{encrypt-then-sign}) or if signed data should be encrypted (\emph{sign-then-encrypt}).
+In general, the \emph{encrypt-then-sign} approach is considered less secure because a malicious entity could simply stripe the signature and sign the ciphertext using its own secret key~\cite{Davis2001}.
 This might lead to unintended flaws in the resulting protocol~\cite[section~11.2]{Jones2015a}.
 
-The naive \textit{sign-then-encrypt} approach, however, suffers from surreptitious forwarding in certain scenarios (details in section~\ref{sec:surreptitious-forwarding}).
+The naive \emph{sign-then-encrypt} approach, however, suffers from surreptitious forwarding in certain scenarios (details in section~\ref{sec:surreptitious-forwarding}).
 The use case of this protocol is affected by the flaw.
 Consider a log which is signed by the data owner indicating that he intentionally shared it.
 This signed log is then encrypted for a set of users.
@@ -159,22 +173,22 @@ This construction, however, implies that the data sent over the insecure network
 \label{sec:jose-protocol}
 
 A log within the current inverse transparency toolchain is represented by a json object.
-This motivates the usage of the \textit{JSON Object Signing and Encryption} standard (\textit{JOSE})~\cite{Barnes2014}.
+This motivates the usage of the \emph{JSON Object Signing and Encryption} standard (\emph{JOSE})~\cite{Barnes2014}.
 Details about it can be found in section~\ref{sec:jose}.
-The \textit{JOSE} standard can be used to cryptographically sign (\textit{JWS}) and encrypt (\textit{JWE}) json data.
+The \emph{JOSE} standard can be used to cryptographically sign (\emph{JWS}) and encrypt (\emph{JWE}) json data.
 It defines multiple algorithms which can be used.
-Specifically, \textit{JWE} tokens can be computed using hybrid encryption algorithms.
-Since \textit{JWS} and \textit{JWE} tokens can also be nested into each other, \textit{JOSE} cab be used to realize the desired protocol by the following means:
+Specifically, \emph{JWE} tokens can be computed using hybrid encryption algorithms.
+Since \emph{JWS} and \emph{JWE} tokens can also be nested into each other, \emph{JOSE} cab be used to realize the desired protocol by the following means:
 \begin{enumerate}
     \item 
-    A log is a \textit{JWS} token signed by the monitor.
+    A log is a \emph{JWS} token signed by the monitor.
     \item 
-    To encrypt a log, the creator computes a \textit{JWS} token which contains the log as a nested token.
+    To encrypt a log, the creator computes a \emph{JWS} token which contains the log as a nested token.
     The token additionally contains the set of intended recipients.
-    This outer \textit{JWS} token is called a shared log in the context of this protocol.
+    This outer \emph{JWS} token is called a shared log in the context of this protocol.
     See figure~\ref{fig:nested-jws} for a visualization of the nested tokens.
     \item
-    The shared log is finally encrypted to obtain a \textit{JWE} token.
+    The shared log is finally encrypted to obtain a \emph{JWE} token.
     This token also contains the unencrypted metadata within its protected header.
 \end{enumerate}
 
@@ -182,7 +196,7 @@ Since \textit{JWS} and \textit{JWE} tokens can also be nested into each other, \
 \begin{figure}[h!]
     \includegraphics[width=4cm]{../img/05/nested_jws.jpg}
     \centering
-    \caption{A log is a \textit{JWS} token signed by the monitor. A shared log is a \textit{JWS} token that contains a nested log. It is signed by the entity encrypting the log.}
+    \caption{A log is a \emph{JWS} token signed by the monitor. A shared log is a \emph{JWS} token that contains a nested log. It is signed by the entity encrypting the log.}
     \label{fig:nested-jws}
 \end{figure}
 
@@ -191,10 +205,12 @@ Since \textit{JWS} and \textit{JWE} tokens can also be nested into each other, \
 
 \section{Creating logs}
 \label{sec:signing}
-A log is represented by a \textit{JWS} token.
+A log is represented by a \emph{JWS} token.
 It contains the identity of the owner, the identity of the monitor and further information which are relevant to identify the data access (see figure~\ref{fig:nested-jws}).
 To avoid malicious data owners manipulating or creating new logs, each log needs to be signed by the monitor specified within the log.
-To create a \textit{JWS} token, the monitor requires access to its private signing key.
+To create a \emph{JWS} token, the monitor requires access to its private signing key.
+A log is signed with the algorithm \verb|ES256| which relies on \verb|ECDSA| and \verb|SHA-256|.
+It is defined by the JSON Web Algorithm specification~\cite{Jones2015}.
 The log is later used as input for the encryption algorithm.
 This construction is intended to resolve security requirement S3 because allows users decrypting a log to verify if the provided log was indeed created by the claimed monitor.
 
@@ -203,11 +219,14 @@ This construction is intended to resolve security requirement S3 because allows 
 The encryption algorithm requires two input parameters: A log and the set of users who are allowed to access the log.
 It can be performed either by a monitor or the data owner.
 A monitor initially encrypts the log for the data owner.
-The data owner might decide to share or revoke access to a log for users.
+The monitor must not include its own identity into the set of authorized users.
+More specifically, the set of authorized users must only contain the data owner if a monitor initially encrypts a log.
+The data owner of the log might decide to share or revoke access to a log for users later on.
 This requires the re-encryption of the log.
-The encryption algorithm outputs a \textit{JWE} token which can be decrypted by the specified users.
+The data owner must always include its own identity into the set of authorized users.
+The encryption algorithm outputs a \emph{JWE} token which can be decrypted by the specified users.
 
-Internally, the encryption algorithm creates another \textit{JWS} token.
+Internally, the encryption algorithm creates another \emph{JWS} token.
 This token is signed with the private signing key of the user encrypting the log (e.g. the creator).
 It is called a shared log because it contains a nested log plus the set of recipients plus the identity of the creator (see figure~\ref{fig:nested-jws}).
 The latter allows a decrypting user to download the public key of the creator which is used to verify the shared log.
@@ -215,10 +234,10 @@ The set of recipients is included to mitigate surreptitious forwarding.
 This construction is intended to resolve security requirement S2.
 It allows to verify a receiver if the data owner has intended to share the log with him or her.
  
-Once the  shared log is created, it is used to compute the final \textit{JWE} token.
-This follows the \textit{sign-then-encrypt} approach elaborated in section~\ref{sec:sign-and-encrypt}.
-The final token is computed by passing the encoded shared log as plaintext into the \textit{JWE} encryption algorithm.
-The set of recipients and the identity of the owner are passed as metadata into the protected header of the \textit{JWE} token.
+Once the  shared log is created, it is used to compute the final \emph{JWE} token.
+This follows the \emph{sign-then-encrypt} approach elaborated in section~\ref{sec:sign-and-encrypt}.
+The final token is computed by passing the encoded shared log as plaintext into the \emph{JWE} encryption algorithm.
+The identities of recipients and the identity of the owner are passed as metadata into the protected header of the \emph{JWE} token.
 The choice of used algorithms to encrypt the data implies hybrid encryption:
 The plaintext is encrypted with the authenticated encryption algorithm \verb|A256GCM| (symmetric encryption via 256-bit AES in Galois/Counter Mode).
 The applied key-wrapping algorithm is \verb|ECDH-ES+A256KW|.
@@ -228,34 +247,34 @@ This algorithm establishes a Diffie-Hellman secret between the creator and recip
 This DH-secret is finally used to encrypt the symmetric key using AES.
 Details about this approach can be found in \cite[100]{Barker2017}.
 Both algorithms are specified by the JSON Web Algorithm specification~\cite{Jones2015}.
-The resulting \textit{JWE} token contains the symmetrically encrypted log, all encrypted keys, and the protected header.
+The resulting \emph{JWE} token contains the symmetrically encrypted log, all encrypted keys, and the protected header.
 It can only be decrypted by the specified recipients because they are the only users who can restore the symmetric encryption key.
 This is intended to resolve security requirement S1 because it effectively end-to-end encrypts a log.
 The whole encryption process is depicted in detail in the appendix~\ref{app:encryption}.
 
 \section{Decrypting logs}\label{sec:decrypting}
 
-The decryption algorithm takes a \textit{JWE} token and a private decryption key as input.
-To verify the \textit{JWS} tokens encoded within the \textit{JWE} token, this algorithm needs to be able to dynamically resolve the identities of users to their public keys.
+The decryption algorithm takes a \emph{JWE} token and a private decryption key as input.
+To verify the \emph{JWS} tokens encoded within the \emph{JWE} token, this algorithm needs to be able to dynamically resolve the identities of users to their public keys.
 
-First of all, the \textit{JWE} token is parsed into its ciphertext, header and encrypted keys.
-The \textit{JWE} decryption algorithm is then applied to the cipher.
+First of all, the \emph{JWE} token is parsed into its ciphertext, header and encrypted keys.
+The \emph{JWE} decryption algorithm is then applied to the cipher.
 This decrypts the ciphertext using the passed private decryption key.
-To be more precise, it tries to decrypt any of the encrypted keys provided by the \textit{JWE} token.
+To be more precise, it tries to decrypt any of the encrypted keys provided by the \emph{JWE} token.
 If this succeeds, the symmetric encryption key is accessible.
 This allows the decryption of the symmetric ciphertext which restores the shared log.
-No decryption is necessary to access the metadata because is stored in the protected header of the \textit{JWE}.
+No decryption is necessary to access the metadata because is stored in the protected header of the \emph{JWE}.
 
 If the decryption is successful, the decrypting user has access to the shared log and the metadata.
 Multiple validations are necessary to ensure that the protocol is used correctly.
 If any of them fails the decryption must be aborted.
 \begin{enumerate}
     \item 
-    The signature of the obtained shared log (outer \textit{JWS} token) must be validated.
+    The signature of the obtained shared log (outer \emph{JWS} token) must be validated.
     To do so, the decrypting user needs to download the public key of the creator specified in the shared log.
     If the verification of the signatures succeeds, the decrypting user can be sure that the claimed creator indeed signed the shared log.
     \item
-    The signature of the nested log (inner \textit{JWS} token) must be validated.
+    The signature of the nested log (inner \emph{JWS} token) must be validated.
     Again, the public key of the specified monitor needs to be downloaded.
     If the verification of the signatures succeeds, the decrypting user can be sure that the claimed monitor indeed signed the log.
     \item
